# artes-papeis2.1

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  productcard.cpp  productcard.h  productformdialog.cpp  productformdialog.h  productmanager.cpp  productmanager.h  produto.h
